[gd_scene load_steps=31 format=3 uid="uid://bm6dhs72445bx"]

[ext_resource type="Script" uid="uid://lt7h65vsjqxr" path="res://scripts/character.gd" id="1_rkhd4"]
[ext_resource type="Texture2D" uid="uid://ci6ksqyu51bu5" path="res://icon.svg" id="2_lrhn5"]
[ext_resource type="AudioStream" uid="uid://s0u3lhbwl1f" path="res://assets/walking-on-concrete-ver-2-268513.mp3" id="3_7eonc"]
[ext_resource type="Texture2D" uid="uid://ck017be4d1dlg" path="res://assets/circle_05.png" id="3_lrhn5"]
[ext_resource type="Texture2D" uid="uid://d3ea38t2ltcd" path="res://assets/person_walking_front-spritesheet-table-200-240.png" id="4_dp8ca"]
[ext_resource type="Texture2D" uid="uid://bspjbt7n7yfh0" path="res://assets/person_walking_side-spritesheet-table-162-240.png" id="5_0lw5n"]
[ext_resource type="Texture2D" uid="uid://qcbdmnlpig84" path="res://assets/idle.png" id="6_0lw5n"]
[ext_resource type="Texture2D" uid="uid://dad75hqrnms1m" path="res://assets/cool jävla hälklack-table-135-240 (1).png" id="7_2cgup"]
[ext_resource type="StyleBox" uid="uid://dqc5ua51ntn8o" path="res://materials/new_style_box_flat.tres" id="8_0dpix"]
[ext_resource type="Texture2D" uid="uid://bvvfl2gy8skhk" path="res://assets/flamethrower.png" id="8_a5ia6"]
[ext_resource type="FontFile" uid="uid://ctnrkjrjmjvsc" path="res://assets/Quantico/Quantico-Bold.ttf" id="9_2hyy3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_my7n2"]
size = Vector2(80, 104)

[sub_resource type="CircleShape2D" id="CircleShape2D_2cgup"]
radius = 32.0

[sub_resource type="Animation" id="Animation_0dpix"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/Idle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Node2D/direction_to_the_goal:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Node2D/direction_to_the_goal:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_irmqu"]
resource_name = "heelclack"
length = 1.73
step = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0667, 0.1334, 0.2001, 0.2668, 0.3335, 0.4002, 0.4669, 0.5336, 0.6003, 0.667, 0.7337, 0.8004, 0.8671, 0.9338, 1.0005, 1.0672, 1.1339, 1.2006, 1.2673, 1.334, 1.4007, 1.4674, 1.5341),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_2hyy3"]
resource_name = "idle"
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2cgup"]
resource_name = "walk_forward"
length = 0.9833
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.1666, 0.2499, 0.3332, 0.4165, 0.4998, 0.5831, 0.6664, 0.7497, 0.833, 0.9163),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/Idle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dp8ca"]
resource_name = "walk_left"
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.1666, 0.2499, 0.3332, 0.4165, 0.4998, 0.5831, 0.6664, 0.7497, 0.833, 0.9163),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(15, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/Idle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a5ia6"]
resource_name = "walk_right"
loop_mode = 1
step = 0.0833
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/PersonWalkingFront-spritesheet-table-200-240:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.1666, 0.2499, 0.3332, 0.4165, 0.4998, 0.5831, 0.6664, 0.7497, 0.833, 0.9163),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-15, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/PersonWalkingSide-spritesheet-table-162-240:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/Idle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/CoolJävlaHälklack-table-135-240(1):visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hyy3"]
_data = {
&"RESET": SubResource("Animation_0dpix"),
&"heelclack": SubResource("Animation_irmqu"),
&"idle": SubResource("Animation_2hyy3"),
&"walk_forward": SubResource("Animation_2cgup"),
&"walk_left": SubResource("Animation_dp8ca"),
&"walk_right": SubResource("Animation_a5ia6")
}

[sub_resource type="Animation" id="Animation_50cep"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/direction_to_the_goal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/direction_to_the_goal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7eonc"]
resource_name = "show_direction"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/direction_to_the_goal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/direction_to_the_goal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8yvht"]
_data = {
&"RESET": SubResource("Animation_50cep"),
&"show_direction": SubResource("Animation_7eonc")
}

[sub_resource type="Curve" id="Curve_0dpix"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.617647, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_2hyy3"]
curve = SubResource("Curve_0dpix")

[sub_resource type="Curve" id="Curve_irmqu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.698529, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_7eonc"]
curve = SubResource("Curve_irmqu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_50cep"]
lifetime_randomness = 0.31
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 18.52
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 61.54
initial_velocity_max = 100.0
gravity = Vector3(0, 200, 0)
scale_min = 4.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_7eonc")
color = Color(0.775063, 0.775063, 0.775063, 1)
alpha_curve = SubResource("CurveTexture_2hyy3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2hyy3"]
bg_color = Color(0.646029, 0.646029, 0.646029, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_a5ia6"]
radius = 24.0

[node name="character" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_rkhd4")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="walking" type="AudioStreamPlayer" parent="AudioListener2D"]
stream = ExtResource("3_7eonc")
volume_db = 4.0
pitch_scale = 1.5
autoplay = true
parameters/looping = true

[node name="sounds" type="Node" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 28)
shape = SubResource("RectangleShape2D_my7n2")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(9.53674e-07, 9.53674e-07)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_lrhn5")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.47, 0.47)

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.19
shadow_enabled = true
texture = ExtResource("3_lrhn5")
texture_scale = 3.26

[node name="spider_in_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="spider_in_area"]
shape = SubResource("CircleShape2D_2cgup")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2hyy3")
}

[node name="show_direction" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8yvht")
}

[node name="Node2D" type="Node2D" parent="."]

[node name="PersonWalkingFront-spritesheet-table-200-240" type="Sprite2D" parent="Node2D"]
visible = false
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_dp8ca")
hframes = 4
vframes = 3

[node name="PersonWalkingSide-spritesheet-table-162-240" type="Sprite2D" parent="Node2D"]
visible = false
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_0lw5n")
hframes = 4
vframes = 3

[node name="Idle" type="Sprite2D" parent="Node2D"]
visible = false
position = Vector2(0, -8)
scale = Vector2(0.865, 0.865)
texture = ExtResource("6_0lw5n")

[node name="Polygon2D" type="Polygon2D" parent="Node2D"]
visible = false
color = Color(0.505344, 0.505344, 0.505344, 1)
polygon = PackedVector2Array(-32, -88, -16, -96, 8, -96, 24, -88, 24, -56, -32, -56)

[node name="CoolJävlaHälklack-table-135-240(1)" type="Sprite2D" parent="Node2D"]
visible = false
texture = ExtResource("7_2cgup")
hframes = 6
vframes = 4

[node name="compass" type="Polygon2D" parent="Node2D"]
position = Vector2(64, 0)
polygon = PackedVector2Array(32, 8, 40, 0, 32, -8, 8, 0)

[node name="direction_to_the_goal" type="Label" parent="Node2D"]
visible = false
z_index = 5
offset_left = 90.0
offset_right = 272.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 18
text = "direction to the goal"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Polygon2D" type="Polygon2D" parent="Node2D/direction_to_the_goal"]
polygon = PackedVector2Array(21, 20, 7, 9, 8, 8, 22, 19)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Node2D"]
z_index = 4
emitting = false
amount = 20
lifetime = 0.6
process_material = SubResource("ParticleProcessMaterial_50cep")

[node name="caught" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="caught"]
offset_right = 632.0
offset_bottom = 360.0
text = "you seem to be caught"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="caught"]
offset_right = 632.0
offset_bottom = 360.0
text = "

press e to skedaddle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ui" type="CanvasLayer" parent="."]
layer = 0

[node name="run_bar" type="ProgressBar" parent="ui"]
offset_left = 597.0
offset_top = 8.0
offset_right = 611.0
offset_bottom = 344.0
theme_override_styles/fill = ExtResource("8_0dpix")
max_value = 800.0
value = 95.34
fill_mode = 3
show_percentage = false

[node name="electricity bar" type="ProgressBar" parent="ui"]
offset_left = 565.0
offset_top = 8.0
offset_right = 579.0
offset_bottom = 344.0
theme_override_styles/fill = SubResource("StyleBoxFlat_2hyy3")
value = 24.42
fill_mode = 3
show_percentage = false

[node name="electricity label" type="Label" parent="ui"]
offset_left = 568.0
offset_top = 8.0
offset_right = 576.0
offset_bottom = 296.0
text = "electricity"
horizontal_alignment = 1
autowrap_mode = 1

[node name="run_bar_label" type="Label" parent="ui"]
offset_left = 600.0
offset_top = 8.0
offset_right = 608.0
offset_bottom = 304.0
text = "run 
speed"
horizontal_alignment = 1
autowrap_mode = 1

[node name="SPIDERS LEFT" type="Label" parent="ui"]
visible = false
z_index = 10
offset_left = 88.0
offset_right = 472.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("9_2hyy3")
theme_override_font_sizes/font_size = 47
text = "SPIDERS LEFT:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SPIDERS LEFT2" type="Label" parent="ui/SPIDERS LEFT"]
layout_mode = 0
offset_left = 360.0
offset_right = 432.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("9_2hyy3")
theme_override_font_sizes/font_size = 47
text = "24"
vertical_alignment = 1

[node name="Label" type="Label" parent="ui/SPIDERS LEFT"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 416.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("9_2hyy3")
theme_override_font_sizes/font_size = 16
text = "HOLD LEFT CLICK TO FIRE"
horizontal_alignment = 1

[node name="flamethrower_pickup" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="flamethrower_pickup"]
shape = SubResource("CircleShape2D_a5ia6")

[node name="flamethrower" type="Node2D" parent="."]

[node name="ft-png" type="PointLight2D" parent="flamethrower"]
position = Vector2(32, -1.90735e-06)
rotation = -2.47139
scale = Vector2(1, -1)
energy = 16.0
texture = ExtResource("8_a5ia6")
texture_scale = 0.18

[node name="nozzle" type="Node2D" parent="flamethrower/ft-png"]
position = Vector2(-75.2346, -59.6302)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
